changing the implementation of Beliefstate.getRecentPositions() so that oracle jdk-10 can compile it